simple todo function

--- a/source/working/.gitignore
+++ b/source/working/.gitignore
@@ -1,8 +1,9 @@
 config/password.csv
 config/port.csv
 config/favorite_private.csv
-nohup.out
 img/background_*
 img/bird.png
 todo/*
+html/todo.html
 python/__pycache__/*
+nohup.out
